externalproject module added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,7 @@ set(LOCEXT ncurses)
 
 file(GLOB UTIL_FILES "${UTL_SRC}/*.hpp")
 file(GLOB HEAD_FILES "${INC_SRC}/${PROJECT_NAME}/*.h" "${INC_SRC}/${PROJECT_NAME}/*.hpp")
-file(GLOB CODE_FILES "${SRC_SRC}/*.c" "${SRC_SRC}/*.cpp")
+file(GLOB CODE_FILES "${SRC_SRC}/${PROJECT_NAME}/*.c" "${SRC_SRC}/${PROJECT_NAME}/*.cpp")
 
 add_library(${PROJECT_NAME} ${UTIL_FILES} ${HEAD_FILES} ${CODE_FILES})
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_11)
