--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 #                 GLOBAL
-##############################################################################################################################################
-###### HUNTER PACKAGE MANAGER ######
+# -------------------------------------------------------------------------------------------------------------------------------------------
+# HUNTER PACKAGE MANAGER
 include("cmake/HunterGate.cmake")
 HunterGate(
     URL "https://github.com/ruslo/hunter/archive/v0.23.214.tar.gz"
     SHA1 "e14bc153a7f16d6a5eeec845fb0283c8fad8c358"
 )
 
-###### VERSION AND NAME ######
+# VERSION AND NAME
 cmake_minimum_required(VERSION 3.10)
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME_WE)
@@ -20,9 +20,9 @@ endif ((NOT PROJECT_NAME))
 message ("\nPROJECT: ${CMAKE_PROJECT_NAME}")
 
 
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 #               VARIABLES
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 set(${CMAKE_PROJECT_NAME}_SUMMARY               "The ${PROJECT_NAME} project")
 set(${CMAKE_PROJECT_NAME}_VENDOR_NAME           "bresilla")
 set(${CMAKE_PROJECT_NAME}_VENDOR_CONTACT        "trim.bresilla@gmail.com")
@@ -37,7 +37,7 @@ set(PROJECT_BUILD                              "${PROJECT_PATH}/build")
 set(SRC_SRC                                    "${PROJECT_PATH}/source")
 set(INC_SRC                                    "${PROJECT_PATH}/include")
 set(EXT_SRC                                    "${PROJECT_PATH}/external")
-set(UTL_SRC                                    "${PROJECT_PATH}/util")
+set(UTL_SRC                                    "${PROJECT_PATH}/utils")
 set(TEST_SRC                                   "${PROJECT_PATH}/test")
 
 set(LIB_BUILD                                  "${PROJECT_BUILD}/lib")
@@ -47,9 +47,9 @@ set(EXECUTABLE_OUTPUT_PATH                     ${BIN_BUILD})
 set(LIBRARY_OUTPUT_PATH                        ${LIB_BUILD})
 
 
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 #                 BUILD
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 string(TOLOWER "${CMAKE_BUILD_TYPE}" cmake_build_type_tolower)
 if(NOT cmake_build_type_tolower STREQUAL "debug" AND NOT cmake_build_type_tolower STREQUAL "release" AND NOT cmake_build_type_tolower STREQUAL "fastdebug" AND NOT cmake_build_type_tolower STREQUAL "fastrelease")
     message(FATAL_ERROR "Unknown build type \"${CMAKE_BUILD_TYPE}\". Allowed values are Debug, Release, FastDebug, and FastRelease (case-insensitive).")
@@ -59,9 +59,9 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 #                 COMPILER
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 include(Warnings)
 #CPP STANDARD OPTIONS
 set(CMAKE_CXX_STANDARD 14)
@@ -93,22 +93,22 @@ endif()
 message ("BUILD TYPE: ${CMAKE_BUILD_TYPE}\n")
 
 
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 #                   EXTERNAL
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 #Use fmtlib for formatting
 add_subdirectory(${EXT_SRC}/fmt EXCLUDE_FROM_ALL)
 target_set_warnings(fmt DISABLE ALL) # Treat fmtlib as a system include as to ignore the warnings
 set_target_properties(fmt PROPERTIES FOLDER "external")
 
-#-------------
+#grouping external libraries
 set(EXTERN fmt)
 set_target_properties(${EXTERN} PROPERTIES COMPILE_OPTIONS "-O2")
 
 
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 #                   LOCAL
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 # LET LD SEARCH HERE (avoid, better use find_library())
 # link_directories(/usr/lib)
 
@@ -117,17 +117,17 @@ if(CURSES_FOUND)
     message ("CURSES_FOUND")
 endif()
 
-#-------------
+#grouping local libraries
 set(LOCEXT ncurses)
 
 
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 #                   SOURCE
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
+file(GLOB UTIL_FILES "${UTL_SRC}/*.h" "${UTL_SRC}/*.hpp")
 
-file(GLOB UTIL_FILES "${UTL_SRC}/*.hpp")
 file(GLOB HEAD_FILES "${INC_SRC}/${PROJECT_NAME}/*.h" "${INC_SRC}/${PROJECT_NAME}/*.hpp")
-file(GLOB CODE_FILES "${SRC_SRC}/${PROJECT_NAME}/*.c" "${SRC_SRC}/${PROJECT_NAME}/*.cpp")
+file(GLOB CODE_FILES "${SRC_SRC}/*.c" "${SRC_SRC}/*.cpp")
 
 add_library(${PROJECT_NAME} ${UTIL_FILES} ${HEAD_FILES} ${CODE_FILES})
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_11)
@@ -147,9 +147,9 @@ foreach(FILE ${CODE_FILES})
 endforeach()
 
 
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 #                   EXECUTABLE
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 add_executable(${PROJECT_NAME}_bin ${SRC_SRC}/main.cpp)
 set_target_properties(${PROJECT_NAME}_bin PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
 
@@ -169,9 +169,9 @@ if(ENABLE_SANITIZERS)
 endif()
 
 
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 #                   TESTS
-###############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 if(BUILD_TESTS)
     include(CTest)
     enable_testing()
@@ -182,7 +182,7 @@ if(BUILD_TESTS)
         get_filename_component(NAME ${PATH} NAME_WE)
         set(NAME ${PROJECT_NAME}_${NAME})
         add_executable(${NAME} ${PATH})
-        target_link_libraries(${NAME} PRIVATE ${PROJECT_NAME})
+        target_link_libraries(${NAME} ${PROJECT_NAME})
         add_test(NAME ${NAME} COMMAND ${EXECUTABLE_OUTPUT_PATH}/${NAME})
         if(ENABLE_COVERAGE)
             add_custom_command(TARGET ${NAME} POST_BUILD COMMAND kcov --include-pattern=${SRC_SRC} ${PROJECT_BINARY_DIR}/cover ${PROJECT_BINARY_DIR}/bin/${NAME})
@@ -202,18 +202,18 @@ if(BUILD_TESTS)
 endif()
 
 
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 #                   DOCUMENTATION
-###############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 file(MAKE_DIRECTORY "${DOCS_BUILD}")
 if(ENABLE_DOCUMENT)
     # add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD COMMAND standardese --output-format=html --input.blacklist_file=CMakeLists.txt ${SRC_SRC} WORKING_DIRECTORY ${DOCS_BUILD})
 endif()
 
 
-##############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 #                   INSTALLATION
-###############################################################################################################################################
+# -------------------------------------------------------------------------------------------------------------------------------------------
 # install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
 # install(DIRECTORY "${LIB_BUILD}/" DESTINATION ${CMAKE_INSTALL_LIBDIR})
 # install(DIRECTORY "${INCLUDE_BUILD}/" DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
