better handle of source files and folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,7 +133,7 @@ set(LOCEXT ncurses)
 file(GLOB UTIL_FILES "${UTL_SRC}/*.h" "${UTL_SRC}/*.hpp")
 
 file(GLOB HEAD_FILES "${INC_SRC}/${PROJECT_NAME}/*.h" "${INC_SRC}/${PROJECT_NAME}/*.hpp")
-file(GLOB CODE_FILES "${SRC_SRC}/*.c" "${SRC_SRC}/*.cpp")
+file(GLOB CODE_FILES "${SRC_SRC}/${PROJECT_NAME}/*.c" "${SRC_SRC}/${PROJECT_NAME}/*.cpp")
 list(REMOVE_ITEM CODE_FILES ${SRC_SRC}/main.cpp)
 
 add_library(${PROJECT_NAME} ${UTIL_FILES} ${HEAD_FILES} ${CODE_FILES})
@@ -248,8 +248,8 @@ endif()
 # Set up packager.
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${${CMAKE_PROJECT_NAME}_SUMMARY}")
 set(CPACK_PACKAGE_VENDOR              "${${CMAKE_PROJECT_NAME}_VENDOR_NAME}")
-set(CPACK_PACKAGE_DESCRIPTION_FILE    "${PROJECT_PATH}/README")
-set(CPACK_RESOURCE_FILE_LICENSE       "${PROJECT_PATH}/LICENSE")
+set(CPACK_PACKAGE_DESCRIPTION_FILE    "${PROJECT_PATH}/README.md")
+set(CPACK_RESOURCE_FILE_LICENSE       "${PROJECT_PATH}/LICENSE.md")
 set(CPACK_PACKAGE_VERSION_MAJOR       "${${CMAKE_PROJECT_NAME}_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR       "${${CMAKE_PROJECT_NAME}_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH       "${${CMAKE_PROJECT_NAME}_VERSION_PATCH}")
