--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -289,6 +289,6 @@ set(CPACK_DEBIAN_PACKAGE_PRIORITY       "optional")
 set(CPACK_DEBIAN_ARCHITECTURE           ${CMAKE_SYSTEM_PROCESSOR})
 
 SET(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
-set(CPACK_GENERATOR "DEB")
+set(CPACK_GENERATOR "DEB;TGZ")
 
 include(CPack)
